--- a/Reviews/index.html
+++ b/Reviews/index.html
@@ -28,7 +28,7 @@
             <div class="img-container">
                 <img src="person-1.jpeg" id="person-image" alt="">
                 <h4 id="author">Sara Jones</h4>
-                <p id="job">UX Designer</p>
+                <p id="job">UX DESİGNER</p>
                 <p id="info">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae eveniet rem cumque at. Nulla ipsum quod autem voluptate explicabo in quia totam est ipsa itaque dolor a, quam tempore reiciendis!
                 </p>
@@ -44,6 +44,8 @@
                     <i class="fas fa-chevron-right"></i>
                 </button>
             </div>
+            <!-- Random Button -->
+            <button class="random-btn">Suprise Me</button>
          </article>
 
      </section>
